Fixed issue with carousel slider, slides no longer overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,22 @@ body {
     padding: 50px 0;
 }
 
+hr {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    border: 0;
+}
+h2 {
+    font-weight: 800;
+    font-size: 1.75rem;
+}
+
+h4 {
+    margin-bottom: .5rem;
+    font-weight: 700;
+    line-height: 1.2;
+}
+}
 
 /*-----Colors-----*/
 
@@ -404,30 +420,35 @@ body {
           box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
   color: #113822;
   padding: 40px;
-  position: relative;
   text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 
 }
 
 /*****Carousel****/
 .carousel-inner{
     font-family: "Raleway", sans-serif;
-    font-size: 1.5rem;
-    margin: auto;
+    font-size: 1.2rem;
+    line-height: 2;
     color: #113822;
+    width: 100%;
+    height: auto;
 }
 
-#carouselTestimonialSlides{
-    margin: 20px;
-    -webkit-transition: 1s .5s ease-in-out;
-    -o-transition: 1s .5s ease-in-out;
-    transition: 1s .5s ease-in-out;
+.carousel-item{
+    float: left;
+    width: 100%;
+    margin-right: -100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    transition: -webkit-transform .6s ease-in-out;
+    transition: transform .6s ease-in-out;
+    transition: transform .6s ease-in-out,-webkit-transform .6s ease-in-out;
 }
 
-
+.carousel-item i {
+    padding: 5px;
+    margin-bottom: 15px;
+}
 
 /******Contact*****/
 
